# world-gal-game

./: .gitignore  AGENTS.md  CLAUDE.md  QA_REPORT.md  README.md  ROADMAP.md  build.py  build.spec  docusaurus.config.js  llms.txt  main.py  package-lock.json  package.json  pyproject.toml  settings.json  sidebars.js
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: README.md  achievements.md  affection.md  ai-debug.md  ai-developer-guide.md  ai-native-contract.md  ai-native-world-model.md  architecture.md  art-transparency.md  characters.md  conditions-reference.md  cookbook.md  distribution-mobile.md  distribution-steam.md  distribution-web.md  distribution.md  effects-reference.md  galgame-maturity.md  getting-started.md  headless.md  items.md  locations.md  pack-format.md  plugins.md  presentation-and-extras.md  quests.md  resources.md  scenes.md  session-protocol.md  shops.md  theme-and-locale.md  tutorial-build-a-game.md
games/demo_pack/: contracts.yaml
scripts/: qingyi_full_route.json  run_smoke.py  smoke_test.json
src/css/: custom.css
tests/: test_achievements.py  test_affection.py  test_agent_endpoints.py  test_ai_native.py  test_ai_native_authoring.py  test_ambient_weather.py  test_auto_mode_voice_wait.py  test_autosave.py  test_build_android.py  test_build_module.py  test_build_web.py  test_camera_effects.py  test_capability_manifest.py  test_cg_gallery.py  test_cg_gallery_scene.py  test_chapter_card_scene.py  test_chapters.py  test_choice_legibility.py  test_clue_system.py  test_config_persistence.py  test_contract.py  test_coverage.py  test_credits_scene.py  test_dataflow.py  test_debug_overlay.py  test_dialogue_engine.py  test_easing.py  test_endings.py  test_endings_scene.py  test_event_log.py  test_extras_scenes.py  test_game_driver.py  test_game_state.py  test_headless_script_exit.py  test_history.py  test_hot_reload.py  test_i18n.py  test_inventory.py  test_layout.py  test_map_travel_restrict.py  (+59 more)
tools/: cutout.py  defringe.py  fix_checker.py  gen_demo_placeholders.py  gen_references.py  i18n_extract.py  imagegen.py  imagegen_art.py  scaffold_pack.py
website/: .gitignore  docusaurus.config.js  package.json
world_gal_game/: __init__.py  app.py  build.py  build_web.py  cli.py  config.py  content_loader.py  headless.py  pack_registry.py  platform_web.py  validator.py  web_main.py  web_pwa.py
world_gal_game/core/: __init__.py  achievements.py  affection.py  cg_gallery.py  chapter_spec.py  clear_data.py  clue.py  credits.py  endings.py  event_log.py  game_state.py  history.py  inventory.py  localization.py  map_system.py  music_room.py  pack_migration.py  portrait_spec.py  quest.py  read_log.py  resources.py  save_manager.py  shop.py  story_graph.py  text_interpolation.py  time_system.py  variable_spec.py
world_gal_game/dev/: __init__.py  agent_bundle.py  agent_endpoints.py  asset_studio.py  capability_manifest.py  contract.py  coverage.py  dataflow.py  diff.py  driver.py  hot_reload.py  pack_editor.py  pack_inspector.py  planner.py  reachability.py  self_check.py  session_server.py  smoke_runner.py  softlock.py  trace.py  visual_check.py  world_model.py
world_gal_game/dialogue/: __init__.py  condition_text.py  dialogue_engine.py  richtext.py  script_loader.py
world_gal_game/integrations/: __init__.py  steam_bridge.py  steam_plugin.py
world_gal_game/npc/: __init__.py  llm_brain.py  npc_base.py
world_gal_game/plugins/: __init__.py  builtin_conditions.py  builtin_effects.py  condition_args.py  context.py  effect_args.py  errors.py  manager.py  manifest.py  registry.py
world_gal_game/scenes/: __init__.py  achievements_scene.py  affection_scene.py  base.py  cg_gallery_scene.py  chapter_card_scene.py  character_profile_scene.py  chat_scene.py  clues_scene.py  credits_scene.py  destination_picker.py  dialogue_scene.py  endings_scene.py  event_log_scene.py  exploration.py  flowchart_scene.py  inventory_scene.py  map_scene.py  menu_scene.py  movie_scene.py  music_room_scene.py  npc_action_scene.py  onboarding_scene.py  quest_log_scene.py  save_scene.py  (+6 more)
(+71 files in other folders)
