[project]
name = "world-gal-game"
version = "0.1.0"
description = "A pygame Gal-Game engine: map exploration, multi-axis affection, branching scenes, achievements, items, shops, resources. Each game is a YAML content pack loaded at runtime; the engine itself ships no game-specific content."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Hsu Po-Hsiang" }]
keywords = ["gal-game", "visual-novel", "pygame", "engine", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pygame-ce>=2.5",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    # ruamel.yaml drives comment-preserving YAML round-trips inside
    # PackEditor — needed so AI-driven edits don't wipe pack authors'
    # comments. PyYAML stays for hot-path read-only loading.
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
# LLM-backed NPC brains are deferred — the seam is kept in
# `world_gal_game/npc/llm_brain.py` but no provider ships in v0.1.
dev = ["pytest>=8.0"]
build = ["pyinstaller>=6.5"]
# Web (pygbag/WASM) packaging. OPTIONAL: nothing in the always-imported
# engine path imports pygbag — it is shelled out to only by
# `world_gal_game/build_web.py`. Pinned lower bound for FS-sync stability.
web = ["pygbag>=0.9.2"]
# Steam (desktop) integration. NO PyPI dependency: the bridge is a ctypes
# wrapper (`world_gal_game/integrations/steam_bridge.py`) over the official
# `steam_api` redistributable, which the developer supplies from their Steam
# depot and is never vendored here. The group exists as a documented marker.
steam = []

[project.scripts]
# The console entry point installed when this package is pip / uv installed.
world-gal-game = "world_gal_game.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only ship the engine. Games are external — they bring their own content.
packages = ["world_gal_game"]
